--- a/leili.bib
+++ b/leili.bib
@@ -304,7 +304,7 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
 }
 
 @InProceedings{wu2021language,
-  author    = {Liwei Wu and Shanbo Chen and Mingxuan Wang and Lei Li},
+  author    = {Liwei Wu and Shanbo Cheng and Mingxuan Wang and Lei Li},
   booktitle = {the 59th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
   title     = {Language Tags Matter for Zero-Shot Neural Machine Translation},
   year      = {2021},
@@ -767,7 +767,7 @@ Such new perspective leads to a refreshed understanding of the roles of second m
 }
 
 @InProceedings{ru2020active,
-  author    = {Dongyu Ru and Jiangtao Feng and Lin Qiu and Hao Zhou and Mngxuan Wang and Weinan Zhang and Yong Yu and Lei Li},
+  author    = {Dongyu Ru and Jiangtao Feng and Lin Qiu and Hao Zhou and Mingxuan Wang and Weinan Zhang and Yong Yu and Lei Li},
   booktitle = {the Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings},
   title     = {Active Sentence Learning by Adversarial Uncertainty Sampling in Discrete Space},
   year      = {2020},
