update home page

--- a/leili.bib
+++ b/leili.bib
@@ -1,3 +1,96 @@
+@InProceedings{li2022learning,
+  author    = {Yunfei Li and Tao Kong and Lei Li and Yi Wu},
+  booktitle = {{IEEE} International Conference on Robotics and Automation ({ICRA})},
+  title     = {Learning Design and Construction with Varying-Sized Materials via Prioritized Memory Resets},
+  year      = {2022},
+  month     = may,
+  code      = {https://github.com/IrisLi17/bridge_construction},
+  url       = {https://sites.google.com/view/bridge-pmr},
+}
+
+@InProceedings{bao2022parallel,
+  author    = {Yu Bao and Hao Zhou and Shujian Huang and Dongqi Wang and Lihua Qian and Xinyu Dai and Jiajun Chen and Lei Li},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Parallel Decoding Sequences by Glancing Discrete Latent Variables},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=y4xCe0MSoWx},
+}
+
+@InProceedings{dong2022learning,
+  author    = {Qianqian Dong and Yaoming Zhu and Mingxuan Wang and Lei Li},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Learning When to Translate for Streaming Speech},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=mBz73IzOI6},
+}
+
+@InProceedings{fang2022stmm,
+  author    = {Qingkai Fang and Rong Ye and Lei Li and Yang Feng and Mingxuan Wang},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {{STMM}: Self-learning with Speech-text Manifold Mixup for Speech Translation},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=kazCgft9cCH},
+}
+
+@InProceedings{fu2022contextual,
+  author    = {Zhiyi Fu and Wangchunshu Zhou and Jingjing Xu and Hao Zhou and Lei Li},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  title     = {Contextual Representation Learning beyond Masked Language Modeling},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=KWL_ElhUejN},
+}
+
+@InProceedings{chen2022e,
+  author    = {Jiangjie Chen and Rui Xu and Ziquan Fu and Wei Shi and Zhongqiao Li and Xinbo Zhang and Changzhi Sun and Lei Li and Yanghua Xiao and Hao Zhou},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
+  title     = {{E-KAR}: A Benchmark for Rationalizing Natural Language Analogical Reasoning},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=9kXOFRtrEj},
+}
+
+@InProceedings{sun2022empirical,
+  author    = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
+  title     = {An Empirical Study of Document-to-document Neural Machine Translation},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=sU9fYzNZ3xX},
+}
+
+@InProceedings{zhao2022compressing,
+  author    = {Xuandong Zhao and Zhiguo Yu and Ming Wu and Lei Li},
+  booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
+  title     = {Compressing Sentence Representation via Homomorphic Projective Distillation},
+  year      = {2022},
+  month     = may,
+  eprint    = {https://openreview.net/forum?id=n3cvM4Phez9},
+}
+
+@InProceedings{song2022non,
+  author    = {Zhenqiao Song and Hao Zhou and Lihua Qian and Jingjing Xu and Shanbo Cheng and Mingxuan Wang and Lei Li},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  title     = {Non-Autoregressive Models are Better Multilingual Translators},
+  year      = {2022},
+  month     = apr,
+  eprint    = {https://openreview.net/forum?id=5HvpvYd68b},
+  owner     = {lilei.02},
+}
+
+@InProceedings{yang2022enhancing,
+  author    = {Huiyun Yang and Huadong Chen and Hao Zhou and Lei Li},
+  booktitle = {International Conference on Learning Representations (ICLR)},
+  title     = {Enhancing Cross-lingual Transfer by Manifold Mixup},
+  year      = {2022},
+  month     = apr,
+  eprint    = {https://openreview.net/forum?id=OjPmfr9GkVv},
+  owner     = {lilei.02},
+}
+
 @InProceedings{chen2022loren,
   author    = {Jiangjie Chen and Qiaoben Bao and Changzhi Sun and Xinbo Zhang and Jiaze Chen and Hao Zhou and Yanghua Xiao and Lei Li},
   booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
