--- a/leili.bib
+++ b/leili.bib
@@ -53,10 +53,10 @@
   eprint    = {https://openreview.net/forum?id=9kXOFRtrEj},
 }
 
-@InProceedings{sun2022empirical,
+@InProceedings{sun2022rethinking,
   author    = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
   booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL) - Findings},
-  title     = {An Empirical Study of Document-to-document Neural Machine Translation},
+  title     = {Rethinking Document-level Neural Machine Translation},
   year      = {2022},
   month     = may,
   eprint    = {https://openreview.net/forum?id=sU9fYzNZ3xX},
@@ -71,10 +71,10 @@
   eprint    = {https://openreview.net/forum?id=n3cvM4Phez9},
 }
 
-@InProceedings{song2022non,
+@InProceedings{song2022switch,
   author    = {Zhenqiao Song and Hao Zhou and Lihua Qian and Jingjing Xu and Shanbo Cheng and Mingxuan Wang and Lei Li},
   booktitle = {International Conference on Learning Representations (ICLR)},
-  title     = {Non-Autoregressive Models are Better Multilingual Translators},
+  title     = {{switch-GLAT}: Multilingual Parallel Machine Translation via Code-switch Decoder},
   year      = {2022},
   month     = apr,
   eprint    = {https://openreview.net/forum?id=5HvpvYd68b},
@@ -2118,13 +2118,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   author = {Mingwei Li and Qingyuan Jiang and Yi He and Lei Li and Wujun Li},
   title  = {Bidirectional Attentive Convolutional Neural Network for Near-Duplicate Video Retrieval},
   year   = {Preprint},
-}
-
-@Unpublished{sunPreprintcapturing,
-  author = {Zewei Sun and Mingxuan Wang and Hao Zhou and Chengqi Zhao and Shujian Huang and Jiajun Chen and Lei Li},
-  title  = {Capturing Longer Context for Document-level Neural Machine Translation: A Multi-resolutional Approach},
-  year   = {Preprint},
-  eprint = {https://arxiv.org/abs/2010.08961},
 }
 
 @Noshow{tianPreprintconversational,
