--- a/leili.bib
+++ b/leili.bib
@@ -8,10 +8,10 @@
   url       = {https://sites.google.com/view/bridge-pmr},
 }
 
-@InProceedings{bao2022parallel,
+@InProceedings{bao2022latent,
   author    = {Yu Bao and Hao Zhou and Shujian Huang and Dongqi Wang and Lihua Qian and Xinyu Dai and Jiajun Chen and Lei Li},
   booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL)},
-  title     = {Parallel Decoding Sequences by Glancing Discrete Latent Variables},
+  title     = {latent-{GLAT}: Glancing at Latent Variables for Parallel Text Generation},
   year      = {2022},
   month     = may,
   eprint    = {https://openreview.net/forum?id=y4xCe0MSoWx},
@@ -26,10 +26,10 @@
   eprint    = {https://openreview.net/forum?id=mBz73IzOI6},
 }
 
-@InProceedings{fang2022stmm,
+@InProceedings{fang2022stemm,
   author    = {Qingkai Fang and Rong Ye and Lei Li and Yang Feng and Mingxuan Wang},
   booktitle = {the 60th Annual Meeting of the Association for Computational Linguistics (ACL)},
-  title     = {{STMM}: Self-learning with Speech-text Manifold Mixup for Speech Translation},
+  title     = {{STEMM}: Self-learning with Speech-text Manifold Mixup for Speech Translation},
   year      = {2022},
   month     = may,
   eprint    = {https://openreview.net/forum?id=kazCgft9cCH},
