--- a/leili.bib
+++ b/leili.bib
@@ -1,11 +1,12 @@
 @InProceedings{chen2022mtg,
   author    = {Chen, Yiran and Song, Zhenqiao and Wu, Xianze and Wang, Danqing and Xu, Jingjing and Chen, Jiaze and Zhou, Hao and Li, Lei},
   booktitle = {Proceedings of the 2022 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT Findings)},
-  title     = {MTG: A Benchmark Suite for Multilingual Text Generation},
+  title     = {{MTG}: A Benchmark Suite for Multilingual Text Generation},
   year      = {2022},
   month     = jul,
   publisher = {Association for Computational Linguistics},
   abstract  = {We introduce MTG, a new benchmark suite for training and evaluating multilingual text generation. It is the first and largest multilingual multiway text generation benchmark with 400k human-annotated data for four generation tasks (story generation, question generation, title generation and text summarization) across five languages (English, German, French, Spanish and Chinese). Its multiway characteristic makes it possible to achieve direct cross-lingual generation between any two languages, thus facilitating knowledge transfer. Based on MTG, we set various evaluation scenarios and conduct deep analyses of several popular multilingual generation models from different aspects. Our benchmark suite can foster model performance enhancement with more human-annotated parallel data and encourage model evaluation with more diverse generation scenarios.},
+  eprint    = {https://arxiv.org/abs/2108.07140},
   owner     = {lilei.02},
 }
 
@@ -486,7 +487,7 @@ The code and dataset are publicly available at \url{https://github.com/rgwt123/S
 }
 
 @InProceedings{long2021generative,
-  author    = {X},
+  author    = {Long, Quanyu and Wang, Mingxuan and Li, Lei},
   booktitle = {Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies (NAACL-HLT)},
   title     = {Generative Imagination Elevates Machine Translation},
   year      = {2021},
@@ -2151,13 +2152,6 @@ clickbait detection and generic text classification tasks demonstrate that our p
   title  = {{PNAT}: Non-autoregressive Transformer by Position Learning},
   year   = {Preprint},
   eprint = {https://arxiv.org/abs/1911.10677},
-}
-
-@Unpublished{chenPreprintmtg,
-  author = {Yiran Chen and Zhenqiao Song and Xianze Wu and Danqing Wang and Jingjing Xu and Jiaze Chen and Hao Zhou and Lei Li},
-  title  = {{MTG}: A Benchmarking Suite for Multilingual Text Generation},
-  year   = {Preprint},
-  eprint = {https://arxiv.org/abs/2108.07140},
 }
 
 @Noshow{liPreprintbidirectional,
