--- a/leili.bib
+++ b/leili.bib
@@ -126,6 +126,7 @@
   title     = {{switch-GLAT}: Multilingual Parallel Machine Translation via Code-switch Decoder},
   year      = {2022},
   month     = apr,
+  abstract  = {Multilingual machine translation aims to develop a single model for multiple language directions. However, existing multilingual models based on Transformer are limited in terms of both translation performance and inference speed. In this paper, we propose switch-GLAT, a non-autoregressive multilingual machine translation model with a code-switch decoder. It can generate contextual code- switched translations for a given source sentence, and perform code-switch back- translation, greatly boosting multilingual translation performance. In addition, its inference is highly efficient thanks to its parallel decoder. Experiments show that our proposed switch-GLAT outperform the multilingual Transformer with as much as 1.16 BLEU improvement and 6.6x faster decoding speed in inference.},
   eprint    = {https://openreview.net/forum?id=5HvpvYd68b},
   owner     = {lilei.02},
 }
